<resources>
    <string name="app_name">MachineLearningAppAndroid</string>
    <string name="image_view">Image View</string>
    <string name="perform_model">Perform Model</string>
    <string name="view_next">View Next Mask</string>
    <string name="run_model">Running the model...</string>
    <string name="restart">Restart</string>
    <string name="input_image">Input Image</string>
    <string name="segmentation_model_selection">Go To Segmentation Model</string>
    <string name="attributes_model_selection">Go To Attributes Model</string>
    <string name="joint_model_selection">Go To Joint Model</string>
    <string name="performing">Performing...</string>
    <string name="title_activity_attributes">AttributesActivity</string>
    <string name="attributes_list_heading">This face has the following attributes:</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>