<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActivity">

    <Button
        android:id="@+id/segmentation_selection_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/segmentation_model_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/attributes_selection_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/attributes_model_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segmentation_selection_button" />

    <Button
        android:id="@+id/joint_selection_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/joint_model_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attributes_selection_button" />
</androidx.constraintlayout.widget.ConstraintLayout>